man page translations: update Ukrainian

--- a/doc/man/po4a/po/uk.po
+++ b/doc/man/po4a/po/uk.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 4.4.0\n"
 "POT-Creation-Date: 2022-02-20 11:24+0100\n"
-"PO-Revision-Date: 2022-03-05 14:42+0100\n"
+"PO-Revision-Date: 2022-03-05 13:53+0000\n"
 "Last-Translator: Vlad Anisimov <uniss@ua.fm>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/uk/)\n"
 "Language: uk\n"
@@ -729,7 +729,7 @@ msgstr "Можливі ключі:"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvextract.xml:474
 msgid "timestamp"
-msgstr "мітка_часу"
+msgstr "мітка часу"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvextract.xml:476
