translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.9.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-05 14:43+0100\n"
-"PO-Revision-Date: 2022-02-05 16:28+0000\n"
+"PO-Revision-Date: 2022-03-07 17:32+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/ca/)\n"
@@ -10936,7 +10936,7 @@ msgstr "Estableix els i&diomes dels noms del capítol:"
 #: src/propedit/propedit_cli_parser.cpp:233
 #, no-c-format
 msgid "Set the charset to use when reading chapter files using the simple chapter format"
-msgstr ""
+msgstr "Estableix el joc de caràcters a usar quan quan es llegeixin els fitxers de capítols mitjançant el format de capítol senzill"
 
 #: src/propedit/propedit_cli_parser.cpp:243
 #, no-c-format
@@ -11189,9 +11189,9 @@ msgid "Simple chapter parser: {0}\n"
 msgstr "Analitzador de capítol senzill: {0}\n"
 
 #: src/mpegparser/M2VParser.cpp:416
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Single field picture detected. Fix the MPEG2 video stream before attempting to multiplex it.\n"
-msgstr "Fotograma amb un únic camp abans de la capçalera GOP detectada. Arregleu el fitxer de vídeo MPEG2 abans d'intentar el multiplexat.\n"
+msgstr "S'ha detectat una imatge d'un únic camp. Esmeneu el flux de vídeo MPEG2 abans d'intentar-lo multiplexar.\n"
 
 #: src/mkvtoolnix-gui/forms/merge/select_disc_library_information_dialog.h:73
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:306
