translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: mkvtoolnixgui\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-05 14:43+0100\n"
-"PO-Revision-Date: 2022-03-01 08:20+0000\n"
+"PO-Revision-Date: 2022-03-05 23:35+0000\n"
 "Last-Translator: tmtisfree <tmtisfree@free.fr>\n"
 "Language-Team: French (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
@@ -10869,7 +10869,7 @@ msgstr "Définir la langue des noms de chapitres :"
 #: src/propedit/propedit_cli_parser.cpp:233
 #, no-c-format
 msgid "Set the charset to use when reading chapter files using the simple chapter format"
-msgstr ""
+msgstr "Définir le jeu de caractères à utiliser lors de la lecture des fichiers de chapitres utilisant le format de chapitre simple"
 
 #: src/propedit/propedit_cli_parser.cpp:243
 #, no-c-format
