--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-05 14:43+0100\n"
-"PO-Revision-Date: 2022-02-05 20:00+0000\n"
+"PO-Revision-Date: 2022-03-05 17:37+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
@@ -10879,7 +10879,7 @@ msgstr "Imposta le lingue nome capitolo:"
 #: src/propedit/propedit_cli_parser.cpp:233
 #, no-c-format
 msgid "Set the charset to use when reading chapter files using the simple chapter format"
-msgstr ""
+msgstr "Imposta il set di caratteri da usare durante la lettura di file di capitoli con il formato capitolo semplice"
 
 #: src/propedit/propedit_cli_parser.cpp:243
 #, no-c-format
@@ -11132,9 +11132,11 @@ msgid "Simple chapter parser: {0}\n"
 msgstr "Analisi semplice carattere: {0}\n"
 
 #: src/mpegparser/M2VParser.cpp:416
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Single field picture detected. Fix the MPEG2 video stream before attempting to multiplex it.\n"
-msgstr "Rilevato campo singolo prima dell'intestazione GOP. Puoi correggere il flusso video MPEG2 prima di effettuare il multiplex.\n"
+msgstr ""
+"Singolo campo immagine rilevato.\n"
+"Corregge il flusso video MPEG2 prima di tentare di effettuare il multiplex.\n"
 
 #: src/mkvtoolnix-gui/forms/merge/select_disc_library_information_dialog.h:73
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:306
