--- a/po/ru.po
+++ b/po/ru.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-05 14:43+0100\n"
-"PO-Revision-Date: 2022-02-28 22:14+0000\n"
+"PO-Revision-Date: 2022-03-05 21:40+0000\n"
 "Last-Translator: Andrei Stepanov\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
@@ -10678,7 +10678,7 @@ msgstr "Задать названиям глав &язык:"
 #: src/propedit/propedit_cli_parser.cpp:233
 #, no-c-format
 msgid "Set the charset to use when reading chapter files using the simple chapter format"
-msgstr ""
+msgstr "Установить кодировку для использования при чтении файлов глав с использованием простого формата глав"
 
 #: src/propedit/propedit_cli_parser.cpp:243
 #, no-c-format
