--- a/po/tr.po
+++ b/po/tr.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.8.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-05 14:43+0100\n"
-"PO-Revision-Date: 2022-03-02 16:16+0000\n"
+"PO-Revision-Date: 2022-03-06 06:57+0000\n"
 "Last-Translator: BouRock\n"
 "Language-Team: Turkish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/tr/)\n"
@@ -10858,7 +10858,7 @@ msgstr "Bölüm adlarının &dillerini şuna ayarla:"
 #: src/propedit/propedit_cli_parser.cpp:233
 #, no-c-format
 msgid "Set the charset to use when reading chapter files using the simple chapter format"
-msgstr ""
+msgstr "Basit bölüm biçimini kullanarak bölüm dosyalarını okurken kullanılacak karakter kümesini ayarlayın"
 
 #: src/propedit/propedit_cli_parser.cpp:243
 #, no-c-format
