man page translations: update Italian

--- a/doc/man/po4a/po/it.po
+++ b/doc/man/po4a/po/it.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-02-20 11:24+0100\n"
-"PO-Revision-Date: 2022-02-06 11:21+0000\n"
-"Last-Translator: Ioma Taani\n"
+"PO-Revision-Date: 2022-03-08 08:07+0000\n"
+"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/it/)\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "65.0.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2022-02-06"
-msgstr ""
+msgstr "2022-02-06"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1746,7 +1746,9 @@ msgstr "<option>--generate-chapters</option> <parameter>modalità</parameter>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:250
 msgid "&mkvmerge; can create chapters automatically.  The following two modes are currently supported:"
-msgstr "&mkvmerge; può creare capitoli automaticamente. Attualmente sono supportate le seguenti modalità:"
+msgstr ""
+"&mkvmerge; può creare capitoli automaticamente. \n"
+"Attualmente sono supportate le seguenti modalità:"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><itemizedlist><listitem><para>
 #: doc/man/mkvmerge.xml:256
