--- a/po/fr.po
+++ b/po/fr.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: mkvtoolnixgui\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-07 22:10+0100\n"
-"PO-Revision-Date: 2022-03-05 23:35+0000\n"
-"Last-Translator: tmtisfree <tmtisfree@free.fr>\n"
+"PO-Revision-Date: 2022-03-11 08:38+0000\n"
+"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>\n"
 "Language-Team: French (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -2938,7 +2938,7 @@ msgstr "<ChapterTrack> n'a pas l'enfant <ChapterTrackNumber>."
 #: src/mkvtoolnix-gui/merge/input.cpp:1522
 #, no-c-format
 msgid "<Do not change>"
-msgstr "<Pas de changement>"
+msgstr "<Ne pas modifier>"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:140
 #, no-c-format
@@ -13758,9 +13758,9 @@ msgid "Track"
 msgstr "Piste"
 
 #: src/mkvtoolnix-gui/forms/main_window/prefs_language_shortcut_dialog.h:115
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Track &name (optional):"
-msgstr "Nom de la &piste :"
+msgstr "Nom de la &piste (optionnel) :"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:306
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:64
@@ -13799,9 +13799,9 @@ msgid "Track headers"
 msgstr "Entêtes de la piste"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2080
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Track name"
-msgstr "Nom de la &piste :"
+msgstr "Nom de piste"
 
 #: src/common/kax_element_names.cpp:188
 #: src/common/property_element.cpp:131
