--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (66.0.0-0~bunkus01) impish; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 13 Mar 2022 13:53:53 +0100
+
 mkvtoolnix (65.0.0-0~bunkus01) impish; urgency=low
 
   * New version.
