translations: update Bulgarian

--- a/po/bg.po
+++ b/po/bg.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-07 22:10+0100\n"
-"PO-Revision-Date: 2022-03-11 08:58+0000\n"
-"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>, 2019-2022\n"
 "Language-Team: Bulgarian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/bg/)\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
@@ -11546,7 +11546,7 @@ msgstr "Кодекс на поведение на MKVToolNix"
 #: src/input/r_qtmp4.cpp:1193
 #, no-c-format
 msgid "The MP4 file '{0}' contains chapters whose format was not recognized. This is often the case if the chapters are not encoded in UTF-8. Use the '--chapter-charset' option in order to specify the charset to use.\n"
-msgstr ""
+msgstr "MP4 файлът „{0}“ съдържа епизоди (chapters), чийто формат не бе разпознат. Това често се случва, ако епизодите не са кодирани в UTF-8. Използвай опцията '--chapter-charset', за да поясниш кой набор от символи да се използва.\n"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:517
 #: src/mkvtoolnix-gui/merge/input.cpp:523
