--- a/po/fr.po
+++ b/po/fr.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: mkvtoolnixgui\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-07 22:10+0100\n"
-"PO-Revision-Date: 2022-03-11 08:38+0000\n"
-"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2022\n"
 "Language-Team: French (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -3362,9 +3362,9 @@ msgid "Add new ed&ition after"
 msgstr "Ajouter une nouvelle éd&ition après"
 
 #: src/mkvtoolnix-gui/main_window/prefs_language_shortcut_dialog.cpp:28
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Add new language shortcut"
-msgstr "Raccourcis pour la langue"
+msgstr "Ajouter un raccourci de langue"
 
 #: src/propedit/propedit_cli_parser.cpp:232
 #, no-c-format
@@ -5985,9 +5985,9 @@ msgid "Edit language"
 msgstr "Éditer la langue"
 
 #: src/mkvtoolnix-gui/main_window/prefs_language_shortcut_dialog.cpp:28
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Edit language shortcut"
-msgstr "Raccourcis pour la langue"
+msgstr "Éditer un raccourci de langue"
 
 #: src/propedit/propedit_cli_parser.cpp:254
 #, no-c-format
@@ -8107,7 +8107,7 @@ msgstr "Langue sélectionnée ci-dessous"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:230
 #, no-c-format
 msgid "Language shortcuts"
-msgstr "Raccourcis pour la langue"
+msgstr "Raccourcis de langue"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:308
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2179
@@ -8153,7 +8153,7 @@ msgstr "Légende :"
 msgid "Length: %1 byte"
 msgid_plural "Length: %1 bytes"
 msgstr[0] "Longueur : %1 octet"
-msgstr[1] "Longueur : %1 octets"
+msgstr[1] "Longueur : %1 octets"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -15891,7 +15891,7 @@ msgstr "numéro de piste {0}, {1} trame(s), horodatage {2}"
 #: src/extract/extract_cli_parser.cpp:52
 #, no-c-format
 msgid "tracks [options] [TID1:out1 [TID2:out2 ...]]"
-msgstr "tracks [options] [TID1:out1 [TID2:out2 ...]]"
+msgstr "pistes [options] [TID1:out1 [TID2:out2 ...]]"
 
 #: src/input/r_tta.cpp:51
 #, no-c-format
@@ -15970,7 +15970,7 @@ msgstr "{0} ({1:.3f} trames/champs par seconde pour une piste vidéo)"
 msgid "{0} byte"
 msgid_plural "{0} bytes"
 msgstr[0] "{0} byte"
-msgstr[1] "{0} bytes"
+msgstr[1] "{0} octets"
 
 #: src/common/kax_info.cpp:943
 #, no-c-format
