translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: pt-BR\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-07 22:10+0100\n"
-"PO-Revision-Date: 2022-03-01 03:34+0000\n"
-"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2022\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -197,8 +197,8 @@ msgstr ""
 #, no-c-format
 msgid "  --chapter-charset <cset> Charset for a simple chapter file.\n"
 msgstr ""
-"  --chapter-charset <cset> Conjunto de caracteres para um simples\n"
-"                           arquivo de capítulo.\n"
+"  --chapter-charset <cset> Conjunto de caracteres para um arquivo\n"
+"                           de capítulo simples.\n"
 
 #: src/merge/mkvmerge.cpp:99
 #, no-c-format
@@ -3385,9 +3385,9 @@ msgid "Add new ed&ition after"
 msgstr "Adicionar nova ed&ição após"
 
 #: src/mkvtoolnix-gui/main_window/prefs_language_shortcut_dialog.cpp:28
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Add new language shortcut"
-msgstr "Atalhos de idioma"
+msgstr "Adicionar novo atalho de idioma"
 
 #: src/propedit/propedit_cli_parser.cpp:232
 #, no-c-format
@@ -6008,9 +6008,9 @@ msgid "Edit language"
 msgstr "Editar idioma"
 
 #: src/mkvtoolnix-gui/main_window/prefs_language_shortcut_dialog.cpp:28
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Edit language shortcut"
-msgstr "Atalhos de idioma"
+msgstr "Editar atalho de idioma"
 
 #: src/propedit/propedit_cli_parser.cpp:254
 #, no-c-format
@@ -10905,7 +10905,7 @@ msgstr "Definir os idiomas dos nomes dos capítu&los:"
 #: src/propedit/propedit_cli_parser.cpp:233
 #, no-c-format
 msgid "Set the charset to use when reading chapter files using the simple chapter format"
-msgstr ""
+msgstr "Define o conjunto de caracteres a ser utilizado ao ler arquivos de capítulos usando o formato de capítulo simples."
 
 #: src/propedit/propedit_cli_parser.cpp:243
 #, no-c-format
@@ -11155,7 +11155,7 @@ msgstr "Bloco simples"
 #: src/common/chapters/chapters.cpp:172
 #, no-c-format
 msgid "Simple chapter parser: {0}\n"
-msgstr "Analisador simples de capítulo: {0}\n"
+msgstr "Analisador de capítulo simples: {0}\n"
 
 #: src/mpegparser/M2VParser.cpp:416
 #, no-c-format
@@ -13776,9 +13776,9 @@ msgid "Track"
 msgstr "Faixa"
 
 #: src/mkvtoolnix-gui/forms/main_window/prefs_language_shortcut_dialog.h:115
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Track &name (optional):"
-msgstr "&Nome da faixa:"
+msgstr "&Nome da faixa (opcional):"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:306
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:64
@@ -13817,9 +13817,9 @@ msgid "Track headers"
 msgstr "Cabeçalhos de faixa"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2080
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Track name"
-msgstr "&Nome da faixa:"
+msgstr "Nome da faixa"
 
 #: src/common/kax_element_names.cpp:188
 #: src/common/property_element.cpp:131
