translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-20 19:58+0100\n"
-"PO-Revision-Date: 2022-03-08 08:06+0000\n"
-"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2022\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
 "Language: it\n"
@@ -473,15 +473,15 @@ msgid "  --enable-durations       Enable block durations for all blocks.\n"
 msgstr "  --enable-durations       Abilita durata blocco per tutti i blocchi.\n"
 
 #: src/merge/mkvmerge.cpp:199
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --enable-legacy-font-mime-types\n"
 "                           Use legacy font MIME types when adding new\n"
 "                           attachments as well as for existing ones.\n"
 msgstr ""
-"  --attach-file-once <file>\n"
-"                           Crea un file allegato all'interno del\n"
-"                           primo file Matroska scritto.\n"
+"  --enable-legacy-font-mime-types\n"
+"                           Usa tipi di carattere MIME legacy quando si aggiungono\n"
+"                           nuovi allegati così come per quelli esistenti.\n"
 
 #: src/merge/mkvmerge.cpp:402
 #, no-c-format
@@ -14224,7 +14224,7 @@ msgstr "Usa i tipi MIME legacy per gli allegati dei caratteri"
 #: src/propedit/propedit_cli_parser.cpp:229
 #, no-c-format
 msgid "Use legacy font MIME types when adding new attachments or replacing existing ones"
-msgstr ""
+msgstr "Usa tipi MIME font legacy quando si aggiungono nuovi allegati o si sostituiscono quelli esistenti"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2143
 #, no-c-format
