translations: update Chinese Traditional

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: zh-TW\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-20 19:58+0100\n"
-"PO-Revision-Date: 2022-01-30 21:31+0100\n"
-"Last-Translator: Chun-Kai Mao <chunkai.mao@gmail.com>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Dian Li <xslidian@gmail.com>, 2020,2022\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_TW/)\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
@@ -11428,7 +11428,7 @@ msgstr "語言標籤"
 #: src/common/kax_element_names.cpp:323
 #, no-c-format
 msgid "Tag language (IETF BCP 47)"
-msgstr "語言標籤 (IETF BCP 47)"
+msgstr "標籤語言 (IETF BCP 47)"
 
 #: src/propedit/propedit_cli_parser.cpp:272
 #, no-c-format
