man page translations: update list of translatable strings; update German translation

--- a/doc/man/po4a/po/de.po
+++ b/doc/man/po4a/po/de.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix\n"
 "Report-Msgid-Bugs-To: mo@bunkus.online\n"
-"POT-Creation-Date: 2022-03-20 20:02+0100\n"
-"PO-Revision-Date: 2022-03-20 20:07+0100\n"
+"POT-Creation-Date: 2022-03-23 09:04+0100\n"
+"PO-Revision-Date: 2022-03-23 09:05+0100\n"
 "Last-Translator: Moritz Bunkus <mo@bunkus.online>\n"
 "Language-Team: German <mo@bunkus.online>\n"
 "Language: de\n"
@@ -1595,8 +1595,8 @@ msgstr "Setzt das Standard-Sprachkürzel, das für alle Spuren benutzt wird, fü
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-msgid "The default language code is '<literal>und</literal>' for 'undefined'."
-msgstr "Das Standard-Sprachkürzel ist das für »undefiniert« stehende »<literal>und</literal>«."
+msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
+msgstr "Das Standard-Sprachkürzel ist das für »nicht spezifiziert« stehende »<literal>und</literal>«."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:140
