--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.0.0\n"
-"POT-Creation-Date: 2022-03-20 20:02+0100\n"
+"POT-Creation-Date: 2022-03-23 09:04+0100\n"
 "PO-Revision-Date: 2022-02-12 15:04+0000\n"
 "Last-Translator: overdrive80 <lukillas.ole@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/es/)\n"
@@ -1602,7 +1602,9 @@ msgstr "Establece el código de lenguaje predefinido que será usado para todas 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+#, fuzzy
+#| msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
 msgstr "El código del lenguaje predefinido es '<literal>und</literal>' para 'Indeterminado'. "
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
