--- a/doc/man/po4a/po/pl.po
+++ b/doc/man/po4a/po/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.5.0\n"
-"POT-Creation-Date: 2022-03-20 20:02+0100\n"
+"POT-Creation-Date: 2022-03-23 09:04+0100\n"
 "PO-Revision-Date: 2016-01-30 13:32+0100\n"
 "Last-Translator: Daniel Kluz <sir.daniel.k@gmail.com>\n"
 "Language-Team: none\n"
@@ -1656,7 +1656,7 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
 msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
