--- a/doc/man/po4a/po/zh_CN.po
+++ b/doc/man/po4a/po/zh_CN.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix-man\n"
-"POT-Creation-Date: 2022-03-20 20:02+0100\n"
+"POT-Creation-Date: 2022-03-23 09:04+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Dian Li <xslidian@gmail.com>, 2009-2020,2022\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_CN/)\n"
@@ -1593,7 +1593,9 @@ msgstr "设置默认语言代码，用于没有使用 <link linkend=\"mkvmerge.d
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+#, fuzzy
+#| msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
 msgstr "默认的语言代码为「<literal>und</literal>」，即「undefined」（未定义）。"
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
