--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2022-03-20 20:02+0100\n"
+"POT-Creation-Date: 2022-03-23 09:04+0100\n"
 "PO-Revision-Date: 2022-02-23 22:18+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
@@ -1597,7 +1597,9 @@ msgstr "Estableix el codi d'idioma per omissió que s'emprarà per a les pistes 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+#, fuzzy
+#| msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
 msgstr "El codi d'idioma per omissió és «<literal>und</literal>» per a «undefined» (sense definir)."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
