--- a/doc/man/po4a/po/ja.po
+++ b/doc/man/po4a/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 5.0.1\n"
-"POT-Creation-Date: 2022-03-20 20:02+0100\n"
+"POT-Creation-Date: 2022-03-23 09:04+0100\n"
 "PO-Revision-Date: 2021-07-10 11:49+0200\n"
 "Last-Translator: YOSHIDUMI, Rentaro\n"
 "Language-Team: Japanese (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ja/)\n"
@@ -1594,7 +1594,9 @@ msgstr "<link linkend=\"mkvmerge.description.language\"><option>--language</opti
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+#, fuzzy
+#| msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
 msgstr "既定言語コードは '<literal>und</literal>' つまり「未定義」です。"
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
