--- a/doc/man/po4a/po/nl.po
+++ b/doc/man/po4a/po/nl.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Nederlands 4.0.0.\n"
-"POT-Creation-Date: 2022-03-20 20:02+0100\n"
+"POT-Creation-Date: 2022-03-23 09:04+0100\n"
 "PO-Revision-Date: 2019-09-10 21:56+0200\n"
 "Last-Translator: Theo Gommans <gommysan@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/nl/)\n"
@@ -1700,7 +1700,7 @@ msgstr "Stelt de standaard land code in voor alle sporen tenzij die wordt oversc
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-msgid "The default language code is '<literal>und</literal>' for 'undefined'."
+msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
 msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
