man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-03-23 09:04+0100\n"
-"PO-Revision-Date: 2022-02-23 22:18+0000\n"
-"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2022\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
@@ -38,10 +38,8 @@ msgstr "66.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-02-06"
 msgid "2022-03-13"
-msgstr "06/02/2022"
+msgstr "13/03/2022"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1597,10 +1595,8 @@ msgstr "Estableix el codi d'idioma per omissió que s'emprarà per a les pistes 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-#, fuzzy
-#| msgid "The default language code is '<literal>und</literal>' for 'undefined'."
 msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
-msgstr "El codi d'idioma per omissió és «<literal>und</literal>» per a «undefined» (sense definir)."
+msgstr "El codi d'idioma per omissió és «<literal>und</literal>» per a «undetermined» (sense determinar)."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:140
@@ -2566,7 +2562,7 @@ msgstr "El tipus <abbrev>MIME</abbrev> del següent adjunt. S'aplicarà a la seg
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1103
 msgid "If no <abbrev>MIME</abbrev> type is given a for an attachment, its type will be detected automatically."
-msgstr ""
+msgstr "Si no s'indica cap tipus <abbrev>MIME</abbrev> per a un adjunt, el seu tipus es detectarà automàticament."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1109
@@ -2597,27 +2593,25 @@ msgstr "Es pot emprar el &mkvextract; per a extreure els fitxers adjunts des d'u
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1140
 #: doc/man/mkvpropedit.xml:360
-#, fuzzy
-#| msgid "<option>--enable-durations</option>"
 msgid "<option>--enable-legacy-font-mime-types</option>"
-msgstr "<option>--enable-durations</option>"
+msgstr "<option>--enable-legacy-font-mime-types</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1143
 #: doc/man/mkvpropedit.xml:363
 msgid "Enables the use of legacy <abbrev>MIME</abbrev> types for certain types of font attachments. For example, '<literal>application/x-truetype-font</literal>' will be used for TrueType fonts instead of '<literal>fonts/ttf</literal>'."
-msgstr ""
+msgstr "Permet l'ús de tipus <abbrev>MIME</abbrev> llegats per a determinats tipus d'adjunts de lletra. Per exemple, s'usarà «<literal>application/x-truetype-font</literal>» per a tipus de lletra TrueType en lloc de «<literal>fonts/ttf</literal>»."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1148
 msgid "This affects both new attachments if its <abbrev>MIME</abbrev> type is detected automatically and existing attachments whose stored <abbrev>MIME</abbrev> types will be remapped to the legacy ones."
-msgstr ""
+msgstr "Això afectarà a dos adjunts nous si el seu tipus <abbrev>MIME</abbrev> es detecta automàticament i els adjunts existents del tipus <abbrev>MIME</abbrev> emmagatzemat seran reassignats al llegat."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1153
 #: doc/man/mkvpropedit.xml:373
 msgid "The affected <abbrev>MIME</abbrev> types are '<literal>font/sfnt</literal>', '<literal>font/ttf</literal>' and '<literal>font/collection</literal>' which are all mapped to '<literal>application/x-truetype-fonts</literal>' and '<literal>font/otf</literal>' which is mapped to '<literal>application/vnd.ms-opentype</literal>'."
-msgstr ""
+msgstr "Els tipus <abbrev>MIME</abbrev> afectats son «<literal>font/sfnt</literal>», «<literal>font/ttf</literal>» i «<literal>font/collection</literal>» els quals seran tots assignats a «<literal>application/x-truetype-fonts</literal>» i «<literal>font/otf</literal>» el qual serà assignat a «<literal>application/vnd.ms-opentype</literal>»."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:1163
@@ -5124,7 +5118,7 @@ msgstr "Estableix la descripció a emprar per a les opcions <option>--add-attach
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:368
 msgid "This affects both adding new attachments and replacing existing attachments, but only if the new <abbrev>MIME</abbrev> type isn't specified. Other existing attachments aren't changed."
-msgstr ""
+msgstr "Això afecta tan a afegir adjunts nous aixi com a substituir els existents, però només si no s'especifica el tipus <abbrev>MIME</abbrev> nou. No es canviaran els altres adjunts existents."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:382
