translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.9.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-20 19:58+0100\n"
-"PO-Revision-Date: 2022-03-09 20:59+0000\n"
-"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2022\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/ca/)\n"
 "Language: ca\n"
@@ -497,15 +497,15 @@ msgid "  --enable-durations       Enable block durations for all blocks.\n"
 msgstr "  --enable-durations       Habilita les durades per a tots els blocs.\n"
 
 #: src/merge/mkvmerge.cpp:199
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --enable-legacy-font-mime-types\n"
 "                           Use legacy font MIME types when adding new\n"
 "                           attachments as well as for existing ones.\n"
 msgstr ""
-"  --attach-file-once <fitxer>\n"
-"                           Crea un fitxer adjunt dins del primer fitxer\n"
-"                           Matroska escrit.\n"
+"  --enable-legacy-font-mime-types\n"
+"                           Usa els tipus MIME de lletra llegats quan s'afegeixen\n"
+"                           adjunts nous, així com per als existents.\n"
 
 #: src/merge/mkvmerge.cpp:402
 #, no-c-format
@@ -14267,7 +14267,7 @@ msgstr "Empra els tipus MIME heretats per als ad&junts de tipus de lletra"
 #: src/propedit/propedit_cli_parser.cpp:229
 #, no-c-format
 msgid "Use legacy font MIME types when adding new attachments or replacing existing ones"
-msgstr ""
+msgstr "Usa els tipus MIME de lletra llegats quan s'afegeixin adjunts nous o substitueix els existents."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2143
 #, no-c-format
