--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-26 17:07+0100\n"
-"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"PO-Revision-Date: 2022-03-27 19:00+0200\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2022\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
@@ -11940,17 +11940,17 @@ msgstr "L'intestazione del file di correzione non è stata letta correttamente.\
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:411
 #, no-c-format
 msgid "The corresponding canonical & extended language subtags forms are: %1."
-msgstr ""
+msgstr "I moduli sottotag di lingua canonici ed estesi corrispondenti sono: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:414
 #, no-c-format
 msgid "The corresponding canonical form is: %1."
-msgstr ""
+msgstr "La forma canonica corrispondente è: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:417
 #, no-c-format
 msgid "The corresponding extended language subtags form: %1."
-msgstr ""
+msgstr "Il modulo sottotag della lingua estesa corrispondente: %1."
 
 #: src/merge/output_control.cpp:1627
 #, no-c-format
@@ -12119,9 +12119,9 @@ msgid "The error message was:"
 msgstr "Il messaggio di errore era:"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:380
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtag '%1' is deprecated."
-msgstr "Il tag lingua è corretto."
+msgstr "Il sottotitolo \"%1 \" della lingua estesa è deprecato."
 
 #: src/common/bcp47.cpp:412
 #, no-c-format
@@ -12556,9 +12556,9 @@ msgid "The job has been added to the job queue."
 msgstr "L'attività è stata aggiunta alla coda attività."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:374
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The language '%1' is deprecated."
-msgstr "Il tag lingua è corretto."
+msgstr "La lingua \"%1\" è deprecata."
 
 #: src/input/r_usf.cpp:106
 #, no-c-format
@@ -12896,9 +12896,9 @@ msgid "The recognized format is 'YYYY-mm-ddTHH:MM:SS+zz:zz': the year, month, da
 msgstr "Il formato riconosciuto è 'AAAA-MM-GGToo:mm:ss+zz:zz': la differenza dal fuso orario UTC come anno, mese, giorno, lettera 'T', ore, minuti, secondi; esempio: 2017-03-28T17:28:00-02:00."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:392
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The region '%1' is deprecated."
-msgstr "Il file '%1' esiste già."
+msgstr "La regione \"%1\" è deprecata."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:223
 #, no-c-format
@@ -12926,9 +12926,9 @@ msgid "The sample rate of the two audio tracks is different: {0} and {1}"
 msgstr "Il valore di campionamento delle due tracce audio è differente: {0} e {1}"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:386
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The script '%1' is deprecated."
-msgstr "Il file '%1' esiste già."
+msgstr "Lo script \"%1 \" è deprecato."
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -13273,14 +13273,14 @@ msgid "The values will be available for easy selection in the multiplexer."
 msgstr "I valori saranno disponibili per una facile selezione nel multiplexer."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:398
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The variant '%1' is deprecated."
-msgstr "Il file '%1' esiste già."
+msgstr "La variante \"%1\" è deprecata."
 
 #: src/common/bcp47.cpp:433
 #, no-c-format
 msgid "The variant '{}' occurs more than once."
-msgstr ""
+msgstr "La variante '{}' è presente più di una volta."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:745
 #, no-c-format
@@ -13537,7 +13537,7 @@ msgstr "Questo è utile per situazioni come i dischi Blu-ray in cui esiste una m
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:402
 #, no-c-format
 msgid "This language tag is a grandfathered element only supported for historical reasons."
-msgstr ""
+msgstr "Questa etichetta lingua è un elemento nonno supportato solo per ragioni storiche."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:100
 #, no-c-format
