translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.8.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-26 17:07+0100\n"
-"PO-Revision-Date: 2022-03-08 17:51+0000\n"
-"Last-Translator: BouRock\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: BouRock, 2016-2022\n"
 "Language-Team: Turkish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/tr/)\n"
 "Language: tr\n"
@@ -465,15 +465,15 @@ msgid "  --enable-durations       Enable block durations for all blocks.\n"
 msgstr "  --enable-durations       Tüm bloklar için blok sürelerini etkinleştir.\n"
 
 #: src/merge/mkvmerge.cpp:199
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --enable-legacy-font-mime-types\n"
 "                           Use legacy font MIME types when adding new\n"
 "                           attachments as well as for existing ones.\n"
 msgstr ""
-"  --attach-file-once <dosya>\n"
-"                           İlk yazılmış Matroska dosyası içinde\n"
-"                           dosya eki oluşturur.\n"
+"  --enable-legacy-font-mime-types\n"
+"                           Varolanların yanı sıra yeni ekler eklerken\n"
+"                            eski yazı tipi MIME türlerini kullan.\n"
 
 #: src/merge/mkvmerge.cpp:402
 #, no-c-format
@@ -11917,17 +11917,17 @@ msgstr "Düzeltme dosya üstbilgisi doğru olarak okunmadı.\n"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:411
 #, no-c-format
 msgid "The corresponding canonical & extended language subtags forms are: %1."
-msgstr ""
+msgstr "Karşılık gelen kurallı ve genişletilmiş dil alt etiketleri biçimleri: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:414
 #, no-c-format
 msgid "The corresponding canonical form is: %1."
-msgstr ""
+msgstr "Karşılık gelen kurallı biçim: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:417
 #, no-c-format
 msgid "The corresponding extended language subtags form: %1."
-msgstr ""
+msgstr "Karşılık gelen genişletilmiş dil alt etiketleri biçimi: %1."
 
 #: src/merge/output_control.cpp:1627
 #, no-c-format
@@ -12096,9 +12096,9 @@ msgid "The error message was:"
 msgstr "Hata iletisi şuydu:"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:380
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtag '%1' is deprecated."
-msgstr "Dil etiketi geçerli."
+msgstr "'%1' genişletilmiş dil alt etiketi kullanım dışıdır."
 
 #: src/common/bcp47.cpp:412
 #, no-c-format
@@ -12533,9 +12533,9 @@ msgid "The job has been added to the job queue."
 msgstr "İş, iş kuyruğuna eklendi."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:374
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The language '%1' is deprecated."
-msgstr "Dil etiketi geçerli."
+msgstr "'%1' dili kullanım dışıdır."
 
 #: src/input/r_usf.cpp:106
 #, no-c-format
@@ -12866,9 +12866,9 @@ msgid "The recognized format is 'YYYY-mm-ddTHH:MM:SS+zz:zz': the year, month, da
 msgstr "Tanınan biçim 'YYYY-mm-ddTHH:MM:SS+zz:zz': yıl, ay, gün, 'T' harfi, saat, dakika, saniye ve UTC'den gelen saat dilimi karşılığı; örnek: 2017-03-28T17:28:00-02:00."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:392
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The region '%1' is deprecated."
-msgstr "'%1' dosyası zaten mevcut."
+msgstr "'%1' bölgesi kullanım dışıdır."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:223
 #, no-c-format
@@ -12896,9 +12896,9 @@ msgid "The sample rate of the two audio tracks is different: {0} and {1}"
 msgstr "İki ses izinin örnekleme oranı farklı: {0} ve {1}"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:386
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The script '%1' is deprecated."
-msgstr "'%1' dosyası zaten mevcut."
+msgstr "'%1' senaryosu kullanım dışıdır."
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -13238,14 +13238,14 @@ msgid "The values will be available for easy selection in the multiplexer."
 msgstr "Değerler, çoklayıcıda kolay seçim için kullanılabilir olacaktır."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:398
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The variant '%1' is deprecated."
-msgstr "'%1' dosyası zaten mevcut."
+msgstr "'%1' çeşidi kullanım dışıdır."
 
 #: src/common/bcp47.cpp:433
 #, no-c-format
 msgid "The variant '{}' occurs more than once."
-msgstr ""
+msgstr "'{}' çeşidi bir kereden fazla ortaya çıkıyor."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:745
 #, no-c-format
@@ -13502,7 +13502,7 @@ msgstr "Bu, aynı dizin içinde mevcut olan çok sayıda oynatma listesinde ve o
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:402
 #, no-c-format
 msgid "This language tag is a grandfathered element only supported for historical reasons."
-msgstr ""
+msgstr "Bu dil etiketi, sadece tarihsel nedenlerle desteklenen, tarihi geçmişe dayanan bir öğedir."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:100
 #, no-c-format
@@ -14227,7 +14227,7 @@ msgstr "Yazı tipi ekleri için &eski MIME türlerini kullan"
 #: src/propedit/propedit_cli_parser.cpp:229
 #, no-c-format
 msgid "Use legacy font MIME types when adding new attachments or replacing existing ones"
-msgstr ""
+msgstr "Yeni ekler eklerken veya varolanları değiştirirken eski yazı tipi MIME türlerini kullan"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2143
 #, no-c-format
