translations: update Chinese Simplified

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -11845,17 +11845,17 @@ msgstr "校正文件头部未能正确读取。\n"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:411
 #, no-c-format
 msgid "The corresponding canonical & extended language subtags forms are: %1."
-msgstr ""
+msgstr "对应的最简式以及扩展语言子标签形式均为: %1。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:414
 #, no-c-format
 msgid "The corresponding canonical form is: %1."
-msgstr ""
+msgstr "对应的最简式为: %1。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:417
 #, no-c-format
 msgid "The corresponding extended language subtags form: %1."
-msgstr ""
+msgstr "对应的扩展语言子标签形式为: %1。"
 
 #: src/merge/output_control.cpp:1627
 #, no-c-format
@@ -12023,9 +12023,9 @@ msgid "The error message was:"
 msgstr "错误消息为:"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:380
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtag '%1' is deprecated."
-msgstr "语言标签有效。"
+msgstr "扩展语言子标签「%1」已被弃用。"
 
 #: src/common/bcp47.cpp:412
 #, no-c-format
@@ -12460,9 +12460,9 @@ msgid "The job has been added to the job queue."
 msgstr "任务已添加到任务队列。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:374
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The language '%1' is deprecated."
-msgstr "语言标签有效。"
+msgstr "语言「%1」已被弃用。"
 
 #: src/input/r_usf.cpp:106
 #, no-c-format
@@ -12793,9 +12793,9 @@ msgid "The recognized format is 'YYYY-mm-ddTHH:MM:SS+zz:zz': the year, month, da
 msgstr "可以识别的格式为“YYYY-mm-ddTHH:MM:SS+zz:zz”: 年，月，日，字母“T”，时，分，秒，UTC 时区偏移; 例如: 2017-03-28T17:28:00-02:00。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:392
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The region '%1' is deprecated."
-msgstr "文件 '%1' 已存在。"
+msgstr "地区「%1」已被弃用。"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:223
 #, no-c-format
@@ -12823,9 +12823,9 @@ msgid "The sample rate of the two audio tracks is different: {0} and {1}"
 msgstr "两条音频轨道的采样率不同: {0} 与 {1}"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:386
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The script '%1' is deprecated."
-msgstr "文件 '%1' 已存在。"
+msgstr "文字「%1」已被弃用。"
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -13168,14 +13168,14 @@ msgid "The values will be available for easy selection in the multiplexer."
 msgstr "这些数值将出现在混流器的下拉框中供您选择。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:398
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The variant '%1' is deprecated."
-msgstr "文件 '%1' 已存在。"
+msgstr "变体「%1」已被弃用。"
 
 #: src/common/bcp47.cpp:433
 #, no-c-format
 msgid "The variant '{}' occurs more than once."
-msgstr ""
+msgstr "变体「{}」重复出现。"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:745
 #, no-c-format
@@ -13431,7 +13431,7 @@ msgstr "该功能在同目录下存在较多播放列表且无法快速判断播
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:402
 #, no-c-format
 msgid "This language tag is a grandfathered element only supported for historical reasons."
-msgstr ""
+msgstr "此语言标签为获准保留的（grandfathered）古老标签，仅为历史因素而支持其输入，建议使用相应的现代标签。"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:100
 #, no-c-format
